# jobs-autopilot

./: LIVE_VIEW.md  docker-compose.yml
.claude/memory/: linkedin-job-data-research.md
backend/: .env  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  run.py
backend/.claude/: MEMORY.md
backend/app/: celery_app.py  cli.py  config.py  database.py  main.py
backend/app/agents/: html.py  schema.py  scorer.py  taylorer.py  utils.py
backend/app/models/: job.py  resume.py  settings.py
backend/app/routers/: jobs.py  live.py  resume.py  settings.py  tasks.py
backend/app/scrappers/: __init__.py  cafe_filters.json  hiringcafe.py  indeed.py  linkedin.py  utils.py
backend/app/tasks/: apply.py  cleanup.py  fetch.py  score.py  taylor.py  utils.py
frontend/: .mcp.json  CLAUDE.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/.claude/memory/: MEMORY.md
frontend/src/: App.jsx  main.jsx
frontend/src/components/: JobsTable.jsx  Navbar.jsx  RequireSetup.jsx  SummaryCards.jsx  TaskCard.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/data/: mockData.js
frontend/src/hooks/: useTaskStream.js
frontend/src/pages/: AppliedPage.jsx  HomePage.jsx  JobDetailsPage.jsx  LiveDetailPage.jsx  LivePage.jsx  SettingsPage.jsx  SetupPage.jsx
frontend/src/pages/setup/: DetailsStep.jsx  LinkedInStep.jsx  LlmStep.jsx  ProfileStep.jsx  SkillsStep.jsx  WelcomeStep.jsx  WorkDetailsStep.jsx
frontend/src/store/: apiSlice.js  setupSlice.js  store.js
worker/: Dockerfile  pyproject.toml  run.py
