[project]
name = "jobs-autopilot-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.6.0",
    "pydantic>=2.10.0",
    "celery[redis]>=5.4.0",
    "redis>=6.0.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "httpx>=0.28.1",
    "openai-agents[litellm]>=0.11.1",
    "pymupdf>=1.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ty.rules]
unknown-argument = "error"
unknown-return-type = "error"
possibly-unbound = "error"

