[project]
name = "jobs-autopilot-worker"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.4.0",
    "httpx>=0.28.0",
    "motor>=3.6.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "openai-agents[litellm]>=0.11.1",
    "pymupdf>=1.25.0",
    "redis>=6.0.0",
    "watchfiles>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
